force-app/main/default/objects/Outreach__c/Outreach__c.object-meta.xml
<CustomObject>
    <label>Outreach</label>
    <nameField>
        <displayFormat>O2O-{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>