force-app/main/default/objects/Outreach__c/fields/Attributes_body__c.field-meta.xml
<CustomField>
    <fullName>Attributes_body__c</fullName>
    <label>Attributes body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>