force-app/main/default/objects/Outreach__c/fields/Date_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_sent__c</fullName>
    <description>Outreach send date</description>
    <label>Date sent</label>
    <type>DateTime</type>
</CustomField>