force-app/main/default/objects/Outreach__c/fields/Flag_if_outreach_influenced_a_sale__c.field-meta.xml
<CustomField>
    <fullName>Flag_if_outreach_influenced_a_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag if outreach influenced a sale</label>
    <type>Checkbox</type>
</CustomField>