force-app/main/default/objects/Outreach__c/fields/Outreach_details__c.field-meta.xml
<CustomField>
    <fullName>Outreach_details__c</fullName>
    <description>Additional notes related to the outreach</description>
    <label>Outreach details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>