force-app/main/default/objects/Outreach__c/fields/Outreach_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_ID__c</fullName>
    <description>Outreach unique identifier</description>
    <label>Outreach ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>