force-app/main/default/objects/Outreach__c/fields/Outreach_Influenced_Sales__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Influenced_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outreach Influenced Sales (€ Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>