force-app/main/default/objects/Outreach__c/fields/Outreach_SA__c.field-meta.xml
<CustomField>
    <fullName>Outreach_SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the store associate</description>
    <label>Outreach SA</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Outreachs</relationshipLabel>
    <relationshipName>Outreachs</relationshipName>
    <type>Lookup</type>
</CustomField>