force-app/main/default/objects/Outreach__c/fields/Outreach_Store__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to the Store</description>
    <label>Outreach Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Outreachs</relationshipLabel>
    <relationshipName>Outreachs</relationshipName>
    <type>Lookup</type>
</CustomField>