force-app/main/default/objects/Outreach__c/fields/Outreach_type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_type__c</fullName>
    <description>Contact channel</description>
    <label>Outreach type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call (only inbound)</fullName>
            </value>
            <value>
                <fullName>Text (only inbound)</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>iMessage</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>KakaoTalk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>