force-app/main/default/objects/Outreach__c/fields/Thank_you_note_flag__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_note_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thank you note</label>
    <type>Checkbox</type>
</CustomField>